# kwire

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PLAN.md  README.md  mirrors.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  homebrew-bump.yml  release.yml  secret-scan.yml
app/: README.md
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/examples/: dump_vm.rs  migrate_parts.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  engine.rs  engine_tauri.rs  lib.rs  main.rs  state.rs  viewmodel.rs
app/src-tauri/tests/: engine_concurrency.rs  engine_download_pool.rs  manual_list.rs  reconcile_inflight.rs  series_flow.rs
app/ui/: headless-tauri-test.mjs  headless-test.mjs  i18n-terms.mjs  i18n.json  index.html  uitest.mjs
app/ui-mock/: README.md  headless-test.mjs  index.html
crates/cli/: Cargo.toml
crates/cli/src/: cmd_download.rs  cmd_eval_series.rs  cmd_parse.rs  cmd_query.rs  cmd_run.rs  cmd_series.rs  main.rs
crates/core/: Cargo.toml
crates/core/examples/: concurrency_probe.rs  download_doctor.rs  edge_failover_probe.rs  pdf_cover.rs  reorg_diag.rs  resolve_probe.rs  verify_scratch.rs
crates/core/src/: cover_gen.rs  covers.rs  download.rs  lib.rs  matching.rs  model.rs  naming.rs  orchestrator.rs  pagecount.rs  parse.rs  queue.rs  ranking.rs  search.rs  series.rs  slum.rs  speed.rs  store.rs
crates/core/tests/: download_queue.rs  global_concurrency.rs  hedged_download.rs  intra_list_concurrency.rs  intra_list_download_concurrency.rs  lifecycle.rs  load_real_db.rs  orchestrator_pipeline.rs  parse_fixtures.rs  query_replay.rs  series_replay.rs  settings_reattach.rs  variation_persistence.rs
crates/engine/: Cargo.toml
crates/engine/src/: bridge.rs  engine.rs  legs.rs  lib.rs  state.rs  viewmodel.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  guard.rs  i18n.rs  intent.rs  main.rs  tests.rs  textfit.rs  theme.rs  ui.rs
crates/tui/src/cli/: cmd_get.rs  cmd_search.rs  emitter.rs  mod.rs
demo/: .gitignore  README.md  tour-full-2.tape  tour-full.tape  tour.tape
demo/lists/: avery.md  jeremy.md
docs/: ANNAS_ARCHIVE.md  CDN_EDGE_FINDING.md  CODEBASE.md  DOWNLOAD_RECONCILIATION.md  DOWNLOAD_SCHEDULING.md  EXECUTION_MODEL.md  LEG_LIFECYCLE.md  RELEASING.md  SERIES_AND_COVERS.md  SPECULATIVE_DOWNLOAD.md  SYNCHRONIZATION.md  TUI-NAV-DESIGN.md  TUI.md  i18n-terms.md  tui-clipping-plan.md  tui-help-keymap.md
docs/tui-mock/: kwire-tui-mock.html
fixtures/: avery_public_domain_list.json  avery_public_domain_list.md  jeremy_public_domain_list.json  jeremy_public_domain_list.md
fixtures/expected/: avery.normalized.json  jeremy.normalized.json
fixtures/ipfs/: file_103990261.html  search_row.html
fixtures/search/: alice-s-adventures-in-wonderland-lewis-carroll.html  annas-archive-the-time-machine.html  anne-of-green-gables-l-m-montgomery.html  heidi-her-years-of-wandering-and-learning-spyri.html  the-adventures-of-tom-sawyer-mark-twain.html  the-jungle-book-rudyard-kipling.html  the-time-machine-an-invention-wells.html  the-time-machine-wells.html  the-wind-in-the-willows-grahame.html  the-wonderful-wizard-of-oz-l-frank-baum.html  treasure-island-robert-louis-stevenson.html
fixtures/series/: alice-s-adventures-in-wonderland.html  https-libgen-li-series-php-id-355001.html  https-libgen-li-series-php-id-355002.html  https-libgen-li-series-php-id-364378.html  https-libgen-li-series-php-id-364379.html  https-openlibrary-org-search-json-q-series-key-ol329664l-fields-key-title-subtitle-first-publish-year-limit-60.json  https-openlibrary-org-search-json-q-series-key-ol999999l-fields-key-title-subtitle-first-publish-year-limit-60.json  https-openlibrary-org-search-json-title-a-solitary-volume-author-sole-author-fields-key-title-subtitle-author-name-limit-5.json  https-openlibrary-org-search-json-title-anne-of-green-gables-author-l-m-montgomery-fields-key-title-subtitle-author-name-limit-5.json  https-openlibrary-org-search-json-title-the-wonderful-wizard-of-oz-author-l-frank-baum-fields-key-title-subtitle-author-name-limit-5.json  https-openlibrary-org-search-json-title-uncle-wiggily-author-howard-r-garis-fields-key-title-subtitle-first-publish-year-limit-40.json  https-openlibrary-org-search-json-title-walden-author-henry-david-thoreau-fields-key-title-subtitle-first-publish-year-limit-40.json  https-openlibrary-org-series-ol999999l.html  https-openlibrary-org-works-ol17610986w-json.json  https-openlibrary-org-works-ol17623412w-json.json  https-openlibrary-org-works-ol17798838w-json.json  https-openlibrary-org-works-ol17844203w-json.json  https-openlibrary-org-works-ol17922359w-json.json  https-openlibrary-org-works-ol18147862w-json.json  https-openlibrary-org-works-ol20085413w-json.json  https-openlibrary-org-works-ol20573281w-json.json  https-openlibrary-org-works-ol20788144w-json.json  https-openlibrary-org-works-ol22017172w-json.json  https-openlibrary-org-works-ol28801103w-json.json  https-openlibrary-org-works-ol37505378w-json.json  https-openlibrary-org-works-ol38121567w-json.json  https-openlibrary-org-works-ol44366796w-json.json  https-openlibrary-org-works-olannew-json.json  https-openlibrary-org-works-ollonelyw-json.json  https-www-goodreads-com-book-auto-complete-format-json-q-alice-27s-adventures-in-wonderland.json  https-www-goodreads-com-book-show-22710140.html  https-www-goodreads-com-series-146183.html  the-wonderful-wizard-of-oz.html
fixtures/slum/: heartbeat.json  status-page.json
scripts/: sign-macos-app.sh
tools/: gen_fixtures.py
