[workspace]
members = ["crates/core", "crates/cli", "app/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.18"
strsim = "0.11"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
md-5 = "0.10"
hex = "0.4"
