[package]
name = "libgen-app"
version = "2.1.0"
edition = "2021"
license = "MIT"
description = "Tauri v2 desktop front end for Kwire, over the libgen-core engine."
# A Tauri app is a binary; `lib` exists so `cargo test`/mobile can share `run()`.
default-run = "libgen-app"

[lib]
name = "libgen_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "libgen-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libgen-core = { path = "../../crates/core" }
libgen-engine = { path = "../../crates/engine" }

tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = "0.21"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
tempfile = "3"
