[package]
name = "libgen-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libgen-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
base64 = "0.21"
