[package]
name = "libgen-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kwire"
path = "src/main.rs"

[dependencies]
libgen-engine = { path = "../engine" }
libgen-core = { path = "../core" }

# CLI arg parsing
clap.workspace = true
reqwest.workspace = true

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Path resolution
directories = "5"

# Single-instance advisory file lock (flock(2)) on the data dir.
libc = "0.2"

# Error handling / logging
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
